fixed background-img bugs on mobile devices

--- a/myStyleFile/myStyle.css
+++ b/myStyleFile/myStyle.css
@@ -358,13 +358,21 @@ video {
 }
 
 @media all and (max-width: 850px) {
-    body{
-    background: url(images/greece.jpg) no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
+    
+ .backgroundDiv{
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(images/greece.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
     }
     
     #bgvid {
@@ -419,7 +427,7 @@ video {
 }
 
 @media all and (max-width: 400px) {
-    body { 
+  /*  body { 
       background: url(images/greece.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -427,6 +435,23 @@ video {
     background-size: cover;
     background-attachment: fixed;
       
+    } */
+    
+    
+.backgroundDiv{
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(images/greece.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
     }
     
     #bgvid {
